[divider] fix: container alignment (#438)

--- a/packages/common/web/statics/styles/general.rtlignore.scss
+++ b/packages/common/web/statics/styles/general.rtlignore.scss
@@ -72,3 +72,7 @@
     margin-right: auto;
   }
 }
+
+.flex {
+  display: flex;
+}
